[project]
name = "url_shortener_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "databases>=0.9.0",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
