[project]
name = "url_shortener_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "databases>=0.9.0",
    "fastapi>=0.121.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "pydantic[email]>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "argon2-cffi>=25.1.0",
]
